--- a/CatKitNew/.gitignore
+++ b/CatKitNew/.gitignore
@@ -12,6 +12,7 @@ build/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata
+CatKitNew.xcodeproj/xcuserdata/*
 *.xccheckout
 profile
 *.moved-aside
